<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/alert_dialog_width"
    android:layout_height="@dimen/alert_dialog_input_height"
    android:background="@drawable/shape_window_text_block">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/alert_exit_text_view_width"
        android:layout_height="@dimen/alert_exit_text_view_height"
        android:layout_marginStart="@dimen/alert_exit_text_view_margin_start"
        android:layout_marginTop="@dimen/alert_exit_text_view_margin_top"
        android:layout_marginEnd="@dimen/alert_exit_text_view_margin_end"
        android:layout_marginBottom="@dimen/alert_exit_text_view_margin_bottom"
        android:gravity="center"
        android:text="@string/exit"
        android:textSize="@dimen/alert_exit_text_view_size"
        app:layout_constraintBottom_toTopOf="@+id/buttonYes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonYes"
        style="@style/homeButtonStyle"
        android:layout_width="@dimen/alert_exit_button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/alert_dialog_button_margin_bottom"
        android:text="@string/yes"
        android:textSize="@dimen/alert_dialog_button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonNo"
        style="@style/homeButtonStyle"
        android:layout_width="@dimen/alert_exit_button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/alert_dialog_button_margin_bottom"
        android:text="@string/no"
        android:textSize="@dimen/alert_dialog_button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>